@@ -10,6 +10,8 @@ Wichtig
 Demnächst anschauen
 ----------------------------------------------------------------------
 
+Wizard/Oberfläche zur Erstellung einfacher Regeln (für Einsteiger)
+
 ----------------------------------------------------------------------
 Nicht so wichtig
 ----------------------------------------------------------------------
